/*
Copyright 2023 Man Group Operations Limited

Use of this software is governed by the Business Source License 1.1 included in the file licenses/BSL.txt.

As of the Change Date specified in that file, in accordance with the Business Source License, use of this software will be governed by the Apache License, version 2.0.
*/
syntax = "proto3";

package arcticc.pb2.request_pb2;

import "arcticc/pb2/descriptors.proto";
import "arcticc/pb2/storage.proto";
import "arcticc/pb2/encoding.proto";

message ReadOptions {
    bool force_strings_to_object = 1;
    bool dynamic_schema = 2;
    bool allow_sparse = 3;
}

message Monostate {
    bool mark = 1;
}

message IndexRange {
    uint64 start = 1;
    uint64 end = 2;
}

message RowRange {
    uint64 start = 1;
    uint64 end = 2;
}

//TODO add filter
message ReadQuery {
    repeated string columns = 1;
    oneof FilterRange {
        Monostate monostate = 2;
        IndexRange index_range = 3;
        RowRange row_range = 4;
    }
}

message SnapshotVersionQuery {
    string snap_name = 1;
}

message TimestampVersionQuery {
    int64 timestamp = 1;
}

message SpecificVersionQuery {
    uint64 version = 1;
}

message VersionQuery {
    oneof query {
        Monostate monostate = 1;
        SnapshotVersionQuery snapshot = 2;
        TimestampVersionQuery timestamp = 3;
        SpecificVersionQuery specific = 4;
    }

    bool skip_compat = 5;
    bool iterate_on_failure = 6;
}

message ReadDataFrameRequest {
    oneof id
    {
        uint64 num_id = 1;
        string str_id = 2;
    }

    VersionQuery version_query = 3;
    ReadQuery read_query = 4;
    ReadOptions read_options = 5;
}

message ReadDataFrameResponse {
    arcticc.pb2.descriptors_pb2.TimeSeriesDescriptor time_series = 3;
}

message ListSymbolsRequest {
    bool mark = 1;
    string regex = 2;
    string prefix = 3;
    string snapshot = 4;
    bool use_symbol_list = 5;
}

message ListSymbolsResponse {
    bool mark = 1;
    repeated string symbols= 2;
}

message ServerShutdownRequest {
    bool mark = 1;
}

message ServerShutdownResponse {
    bool mark = 1;
}

message NoDataFoundException {
    string what = 1;
    string key = 2;
}

message ServerException {
    string what = 1;
}

message Exception {
    oneof type {
            NoDataFoundException no_data = 1;
            ServerException error = 2;
    }
}

message RpcRequest {
    arcticc.pb2.storage_pb2.LibraryPath library_path = 1;
    string environment = 2;
    uint64 seqnum = 3;

    oneof request
    {
        ServerShutdownRequest shutdown = 4;
        ReadDataFrameRequest read_dataframe = 5;
        ListSymbolsRequest list_symbols = 6;
    }
}

message RpcResponse {
    oneof id
    {
        uint64 num_id = 1;
        string str_id = 2;
    }

    uint64 seqnum = 3;
    repeated arcticc.pb2.encoding_pb2.EncodedField fields = 4;

    oneof response
    {
        ServerShutdownResponse shutdown = 5;
        Exception exception = 6;
        ReadDataFrameResponse read_dataframe = 7;
        ListSymbolsResponse list_symbols = 8;
    }
}
